<resources>
    <string name="Version">v1.0.6(201601028)</string>
    <string name="device_name">T10TC</string>
    <string name="app_name">TabletTest</string>
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="Empty"></string>
    <string name="Color">Color = </string>
    <string name="White">White</string>
    <string name="Black">Black</string>
    <string name="Red">Red</string>
    <string name="Green">Green</string>
    <string name="Blue">Blue</string>
    <string name="Gray">Gray Scale</string>
    <string name="Orange">Orange</string>
    <string name="VColorBar">Vertical Color Bar</string>
    <string name="HColorBar">Horizon Color Bar</string>
    <string name="CrossHatch">Cross Hatches</string>
    <string name="T7GTWallpaper">T10T Wallpaper</string>
    <string name="Win7Wallpaper">Win7 Wallpaper</string>
    <string name="ExternalEnable">External SD Card is ready.</string>
    <string name="VibrationTitle">Vibration Test</string>
    <string name="VibrationContent">Please judge that if the equipment is vibrating</string>
    <string name="SpeakerTitle">Speaker Test</string>
    <string name="SpeakerContent">Can you hear from the sound?</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="SpeakerTip">left:man, right:woman</string>
    <string name="BrightnessTitle">Brightness Test</string>
    <string name="BrightnessTitleStop">Stop Test</string>
    <string name="BrightnessSubTitle">Please observe the changes of brightness</string>
    <string name="BluetoothTitle">Bluetooth Test</string>
    <string name="BluetoothSubTitle">Please observe the equipment</string>
    <string name="BluetoothAdapterFail">Get adapter failed!</string>
    <string name="BluetoothScan">Scanning equipment...</string>
    <string name="BluetoothInit">Please wait for init the equipment.</string>
    <string name="BluetoothOpenF">Open bluetooth failed.</string>
    <string name="BluetoothFindF">Find equitment failed.</string>
    <string name="BluetoothFindS">Find equipment....\n Pass!</string>
    <string name="CameraTitle">Camera Test</string>
    <string name="CameratextMsgText">Please touch the screen , open the camera</string>
    <string name="GpsTestTitle">Gps C/No test</string>
    <string name="GpsTestSubTitle">Please observe the equipment</string>
    <string name="GpsTestResult">Please wait for init the equipment</string>
    <string name="GpsLocationTestTitle">Gps Location test</string>
    <string name="GpsLocationTestSubTitle">Please observe the equipment</string>
    <string name="GpsLocationTestResult">Please wait for init the equipment</string>
    <string name="gpstextx">X axis C/No:</string>
    <string name="gpstexty">Y axis C/No:</string>
    <string name="gpstestx">Test X axis</string>
    <string name="gpstesty">Test Y axis</string>
    <string name="HeadsetMicTitle">Headset MIC Test</string>
    <string name="HeadsetMicSubTitle">Please say something to the headset\'s mic and hear from the headset</string>
    <string name="LcdTestTitle">LCD Test</string>
    <string name="LcdTestStart">Click LCD to start</string>
    <string name="PhoneMictTitle">Mobile phone MIC test</string>
    <string name="PhoneMicSubTitle">Please say something to the mobile and hear from the speaker</string>
    <string name="PowertestTitle">Battery Information</string>
    <string name="PowertestSubTitle"> </string>
    <string name="AcUnplug">Discharge test(unplug ac):</string>
    <string name="AcPlugin">Charge test(plug in ac):</string>
    <string name="ChargeState">Charge status:%1$s</string>
    <string name="remain_capacity">Remaining Capacity:%1$s mah</string>
    <string name="Voltage">Voltage:%1$s mV</string>
    <string name="Capacity">Capacity:%1$s</string>
    <string name="Plug">Plug:%1$s</string>
    <string name="Plug_status_ac">AC</string>
    <string name="Plug_status_usb">USB</string>
    <string name="Plug_status_none">Unplugged</string>
    <string name="status_full">full</string>
    <string name="status_charging">charging</string>
    <string name="status_not_charging">Not Charging</string>
    <string name="status_unknown">Unknown</string>
    <string name="SdCardTitle">SD card test</string>
    <string name="SdCardSubTitle">Please observe the equipment</string>
    <string name="SdCardFail">Fail!  Can not find SD card</string>
    <string name="SdCardFind">Find sd card, total space: </string>
    <string name="LcdResolutionTitle">Lcd Resolution test</string>
    <string name="LcdResolutionFail">Fail!  LcdResolution</string>
    <string name="TouchtestTitle">Touch test</string>
    <string name="TouchtestSubTitle">Do diagonal test before multi-touch point test</string>
    <string name="VersionTitle">Version test</string>
    <string name="Firmwareversion">Firmware version:</string>
    <string name="Kernelversion">Kernel version:</string>
    <string name="Basebandversion">Baseband version:</string>
    <string name="Buildversion">Product version:</string>
    <string name="VibrationTest">Vibration Test</string>
    <string name="testall">Test All Items</string>
    <string name="Wifitest">Wifi test</string>
    <string name="WifiError">Wifi test fail</string>
    <string name="WifiFind">Wifi has find</string>
    <string name="WifiTry">Try to connect </string>
    <string name="wififindtest">Wifi has find</string>
    <string name="WifiConnect">Wifi has connect</string>
    <string name="WifiPing">Ping test : </string>
    <string name="WifiHttp">Http connect test: </string>
    <string name="WifiConnectErr">Can not get connection</string>
    <string name="WifiSubText">Please observe the equipment</string>
    <string name="WifiResultText">Please wait for init the equipment</string>
    <string name="WifiSignal3">信号(强)</string>
    <string name="WifiSignal2">信号(中)</string>
    <string name="WifiSignal1">信号(弱)</string>
    <string name="WifiSignal0">信号(差)</string>
    <string name="SensorTest">Sensor Test</string>
    <string name="num200">200</string>
    <string name="gsensorvalue">gsensor value: </string>
    <string name="Accelerometer">=== Accelerometer === </string>
    <string name="name_acc"> name:</string>
    <string name="vendor_acc"> vendor:</string>
    <string name="version_acc">version:</string>
    <string name="maxRange_acc">maxRange:</string>
    <string name="resolution_acc">resolution:</string>
    <string name="power_acc">power:</string>
    <string name="sensor_x">x:</string>
    <string name="sensor_y">y:</string>
    <string name="sensor_z">z:</string>
    <string name="Orientation">=== Orientation === </string>
    <string name="Azimuth"> Azimuth:</string>
    <string name="Pitch"> Pitch:</string>
    <string name="Roll"> Roll:</string>
    <string name="Light">=== Light === </string>
    <string name="lightvalue">Light:</string>
    <string name="Proximity">=== Proximity === </string>
    <string name="Magnetic_Field">=== Magnetic_Field === </string>
    <string name="Temperature">=== Temperature === </string>
    <string name="Gsensor_x">x axis points up(x:9,y:0,z:0)</string>
    <string name="Gsensor_y">y axis points up(x:0,y:9,z:0)</string>
    <string name="Gsensor_z">z axis points up(x:0,y:0,z:9)</string>
    <string name="GsensorTest">Gsensor Test</string>
    <string name="MsensorTest">Msensor Test</string>
    <string name="LightsensorTest">Lightsensor Test</string>
    <string name="KeyboardTestTitle">Keyboard Test</string>
    <string name="KeyboardTestSubTitle">Please test all keys</string>
    <string name="VolUp">Vol+</string>
    <string name="VolDown">Vol-</string>
    <string name="Back">Back</string>
    <string name="Menu">Menu</string>
    <string name="Home">Home</string>
    <string name="VolumeKeyTestTitle">Volume Key Test</string>
    <string name="VolumeUp">Volume Up</string>
    <string name="VolumeDown">Volume Down</string>
    <string name="FlashLightTest">FlashLight Test</string>
    <string name="FlashLightTestSubText">Please observe the flashlight of your device when you touch the buttons</string>
    <string name="OpenFlashLight">Open Flash Light</string>
    <string name="ShutDownFlashLight">Shut Down Flash Light</string>
    <string name="SimCardTestTitle">Sim Card Test</string>
    <string name="MrioUSBTitle">Mrio USB Test</string>
    <string name="MrioUSBsubTitle">Plug in usb and unplug usb</string>
    <string name="UsbUnplug">Unplug usb test:</string>
    <string name="UsbPlugin">Plug in usb test:</string>
    <string name="FMRadioTestTitle">FM Radio Test</string>
    <string name="FMRadioTextMsgText">Please touch the screen, Open the FM Radio</string>
    <string name="CirTestTitle">Cir Test</string>
    <string name="CirSend">Send</string>
    <string name="CpuInfo">CPU info</string>
    <string name="MemInfo">MEM info</string>
    <string name="DmiInfo">DMI info</string>
    <string name="IrdaTestTitle">IrDA Test</string>
    <string name="SirSend">Sir Send</string>
    <string name="SirReceive">Sir Receive</string>
    <string name="SirTest">Sir Test</string>
    <string name="FirSend">Fir Send</string>
    <string name="FirReceive">Fir Receive</string>
    <string name="FirTest">Fir Test</string>
    <string name="InsertSdCard">Please Insert SD Card!</string>
    <string name="SdCardNospace">SD Card No Space!</string>
    <string name="btnPassText">Pass</string>
    <string name="btnFailText">Fail</string>
    <string name="btnSkipText">Back</string>
    <string name="Cancel">Close</string>
    <string name="Clear">Clear</string>
    <string name="ddrTitle">DDR Test</string>
    <string name="rearcameratitle">Rear Camera Test</string>
    <string name="cameratest_front__snapshot">Snapshot</string>
    <string name="cameratest_front__preview">图像预览</string>
    <string name="cameratest_front__takephoto">抓拍照片</string>
    <string name="main__standby">休眠次数: </string>
    <string name="main__standby_default">10</string>
    <string name="main__reboot">重启次数: </string>
    <string name="main__reboot_default">10</string>
    <string name="main__playtime">视频播放时间(分钟): </string>
    <string name="main__playtime_default">90</string>
    <string name="runin_reboot__title">Runin：Reboot Test</string>
    <string name="runin_reboot__set">设置次数：</string>
    <string name="runin_reboot__times_set">0</string>
    <string name="runin_reboot__done">完成次数：</string>
    <string name="runin_reboot__times_done">0</string>
    <string name="runin_reboot__timeout">5秒</string>
    <string name="runin_reboot__stop">停止测试</string>
    <string name="runin_playvideo__title">Runin: 视频播放(请连接充电器充电)</string>
    <string name="runin_playvideo__set">设置时间</string>
    <string name="runin_playvideo__time_set">00:00:00</string>
    <string name="runin_playvideo__done">实测时间</string>
    <string name="runin_playvideo__time_done">00:00:00:0</string>
    <string name="runin_playvideo__cpu_temp">CPU温度</string>
    <string name="runin_playvideo__cpu_temp_num">00</string>
    <string name="runin_playvideo__bat_temp">电池温度</string>
    <string name="runin_playvideo__bat_temp_num">00</string>
    <string name="runin_playvideo__bat_cap">电池电量</string>
    <string name="runin_playvideo__bat_cap_num">00</string>
    <string name="runin_playvideo__bat_curr">充电电流</string>
    <string name="runin_playvideo__bat_curr_num">00</string>
    <string name="head_set_detail">请插入耳机</string>
    <string name="next">确定</string>
    <string name="retry">重测</string>
    <string name="fail1">失败</string>
    <string name="power">电源键</string>
    <string name="key_f7">F7</string>
    <string name="key_f8">F8</string>
    <string name="key_f9">F9</string>
    <string name="key_f10">F10</string>
    <string name="key_f12">F12</string>
    <string name="insert_glxss_and_headset">请连接眼镜，并插入耳机！</string>
    <string name="headset_up">耳机音量增加</string>
    <string name="headset_down">耳机音量减小</string>
    <string name="headset_hook">耳机hook键</string>
</resources>