<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<TextView
	    android:id="@+id/title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_gravity="center_horizontal"
	    android:gravity="center"
	    android:text="@string/runin_reboot__title"
	    android:textSize="44sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="240dp"
		    android:gravity="center"
		    android:text="@string/runin_reboot__set"
		    android:textColor="#ffffff00"
		    android:textSize="24sp" />

		<TextView android:id="@+id/runin_times_set"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/runin_reboot__times_set"
			android:textSize="24sp" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="60dp"
		    android:gravity="center"
		    android:text="@string/runin_reboot__done"
		    android:textColor="#ffff00ff"
		    android:textSize="24sp" />

		<TextView android:id="@+id/runin_times_done"
			android:layout_width="120dp"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/runin_reboot__times_done"
			android:textSize="24sp" />
	</LinearLayout>
	
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal" >

		<TextView
		    android:id="@+id/runin_timeout"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="60dp"
		    android:layout_marginLeft="200dp"
		    android:gravity="center"
		    android:text="@string/runin_reboot__timeout"
		    android:textSize="200sp" />

		<Button
		    android:id="@+id/runin_btn_stop"
		    android:layout_width="300dip"
		    android:layout_height="240dp"
		    android:layout_marginLeft="80dp"
		    android:layout_toRightOf="@id/runin_timeout"
		    android:text="@string/runin_reboot__stop"
		    android:textSize="36sp" />

    </RelativeLayout>

</RelativeLayout>
