<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:paddingBottom="60dip">

		<TextView android:id="@+id/textTitle" android:visibility="visible"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_centerInParent="true" android:gravity="center_horizontal"
			android:textSize="24sp" android:paddingTop="20px" android:text="@string/ddrTitle" />

		<ScrollView android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingTop="20px" android:textSize="18sp"
				android:visibility="visible" android:id="@+id/resultText" />
		</ScrollView>




	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_alignParentBottom="true">

		<Button android:id="@+id/btn_Pass" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/btnPassText" />

		<Button android:id="@+id/btn_Fail" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/btnFailText" />
		<Button android:id="@+id/btn_Skip" android:layout_width="0dip"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:text="@string/btnSkipText" />
	</LinearLayout>

</RelativeLayout>